--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   </head>
   
   <div>
-    <h1> Time until Advanced Programming ACW hand in: </h1>  
+    <h1> Time until Database Techniques ACW hand in: </h1>  
     <h1 id="demo"; >?</h1>
   </div>
  
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("May 3, 2018 14:00:00").getTime();
+var countDownDate = new Date("May 4, 2018 14:00:00").getTime();
 // Update the count down every 1 second
 var x = setInterval(function() {
   // Get todays date and time
