--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ var x = setInterval(function() {
   // If the count down is finished, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "h 0 m 0 s 0";
   }
 }, 1000);
 </script>
