--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   
   <div>
-    <h1> Time Left in Three Thing Game(ish): </h1>  
+    <h1> Time Left until Networking and UI Exam: </h1>  
     <h1 id="demo"; >?</h1> 
   </div>
  
@@ -38,12 +38,12 @@ var x = setInterval(function() {
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = hours + "h "
+  document.getElementById("demo").innerHTML =days + "d " + hours + "h "
   + minutes + "m " + seconds + "s ";
   // If the count down is finished, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "THE INSPECTION BEGINS!";
+    document.getElementById("demo").innerHTML = "LET THE EXAMINATION BEGIN!";
   }
 }, 1000);
 </script>
