--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   gtag('config', 'UA-110467141-1');
 </script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <title>Countdown to Hull Computer Science Networking and UI exam</title>
   </head>
   
   <div>
