--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   gtag('config', 'UA-110467141-1');
 </script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>Countdown to Hull Computer Science Networking and UI exam</title>
+    <title>Countdown to Hull Computer Science Advanced Programming exam</title>
   </head>
   
   <div>
-    <h1> Time Left until Networking and UI Exam: </h1>  
+    <h1> Time Until Advanced Programming Exam: </h1>  
     <h1 id="demo"; >?</h1> 
   </div>
  
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("May 10, 2018 14:00:00").getTime();
+var countDownDate = new Date("May 24, 2018 14:00:00").getTime();
 // Update the count down every 1 second
 var x = setInterval(function() {
   // Get todays date and time
