--- a/job.html
+++ b/job.html
@@ -16,7 +16,7 @@
   gtag('config', 'UA-110467141-1');
 </script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>Countdown to Hull Computer Science Advanced Programming exam</title>
+    <title>Countdown to starting work :S </title>
   </head>
   
   <div>
