--- a/Job.html
+++ b/Job.html
@@ -16,16 +16,17 @@
   gtag('config', 'UA-110467141-1');
 </script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <title>Countdown to starting work :S </title>
   </head>
   
   <div>
-    <h1> Time until informed about job: </h1>  
-    <h1 id="demo"; >?</h1>
+    <h1> Time Until Advanced Programming Exam: </h1>  
+    <h1 id="demo"; >?</h1> 
   </div>
  
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("April 19, 2018 17:00:00").getTime();
+var countDownDate = new Date("July 16, 2018 9:00:00").getTime();
 // Update the count down every 1 second
 var x = setInterval(function() {
   // Get todays date and time
@@ -38,12 +39,12 @@ var x = setInterval(function() {
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  document.getElementById("demo").innerHTML =days + "d " + hours + "h "
   + minutes + "m " + seconds + "s ";
   // If the count down is finished, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "LET THE EXAMINATION BEGIN!";
   }
 }, 1000);
 </script>
