--- a/job.html
+++ b/job.html
@@ -20,7 +20,7 @@
   </head>
   
   <div>
-    <h1> Time Until Advanced Programming Exam: </h1>  
+    <h1> Time Until Starting Work: </h1>  
     <h1 id="demo"; >?</h1> 
   </div>
  
@@ -44,7 +44,7 @@ var x = setInterval(function() {
   // If the count down is finished, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "LET THE EXAMINATION BEGIN!";
+    document.getElementById("demo").innerHTML = "GET TO WORK!";
   }
 }, 1000);
 </script>
