--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   gtag('config', 'UA-110467141-1');
 </script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>Countdown to Hull Computer Science Advanced Programming exam</title>
+    <title>Countdown to Hull Computer Science Database Techniques Exam</title>
   </head>
   
   <div>
@@ -26,7 +26,7 @@
  
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("May 24, 2018 9:00:00").getTime();
+var countDownDate = new Date("May 30, 2018 14:00:00").getTime();
 // Update the count down every 1 second
 var x = setInterval(function() {
   // Get todays date and time
