--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   
   <div>
-    <h1> Time Until Advanced Programming Exam: </h1>  
+    <h1>Time Until Database Techniques Exam: </h1>  
     <h1 id="demo"; >?</h1> 
   </div>
  
