--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   gtag('config', 'UA-110467141-1');
 </script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>Time left in internship:</title>
+    <title>Countdown to the end of the internship</title>
   </head>
   
   <div>
-    <h1>Time Until Database Techniques Exam: </h1>  
+    <h1>Time left in internship: </h1>  
     <h1 id="demo"; >?</h1> 
   </div>
  
