--- a/Test/Upload.html
+++ b/Test/Upload.html
@@ -119,6 +119,8 @@
         input.userInp{
             height: 50px;
             width:100%;
+            font-size: 37px;
+            text-align: center;
         }
         input.userInp:focus {
             border: 3px solid #555;
