--- a/Test/Upload.html
+++ b/Test/Upload.html
@@ -32,10 +32,15 @@
                     $("#uploadBtn").attr("hidden", "true");
                 });
             });
+
+            
         });
     </script>
 
     <style>
+        a{
+            text-decoration: none;
+        }
         img.profileIcon{
             width: 500px;
         }
@@ -147,7 +152,7 @@
                 </div>
 
                 <div class="matchme">
-                    <a><span class="matchMeBtn">♥ Match Me ♥</span></a>
+                    <a href="Matched.html"><span class="matchMeBtn">♥ Match Me ♥</span></a>
                 </div>
             </fieldset>    
         </form>
