--- a/Test/Login.html
+++ b/Test/Login.html
@@ -9,6 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
     <style>
+        a{
+            text-decoration: none;
+        }
         img.profileIcon{
             width: 500px;
         }
@@ -58,6 +61,18 @@
             font-weight: bold;
             font-family: 'Roboto', sans-serif;
         }
+        span.registerMeBtn{
+            box-shadow: 0 0 0 3px #8338ec inset;
+            background-color: #8338ec;
+            color: #2D3142;
+
+            border: 2px solid gray;
+            padding: 8px 20px;
+            border-radius: 8px;
+            font-size: 15px;
+            font-weight: bold;
+            font-family: 'Roboto', sans-serif;
+        }
 
         p{
             font-size: 50px;
@@ -80,6 +95,9 @@
         input.userInp:focus {
             border: 3px solid #555;
         }
+        .bottom{
+            padding:30px;
+        }
     </style>
 </head>
 
@@ -96,8 +114,12 @@
                 </div>
 
 
-                <div class="matchme">
-                    <a><span class="matchMeBtn">Login</span></a>
+                <div class="center-content">
+                    <a href="Upload.html"><span class="matchMeBtn">Login</span></a>
+                </div>
+
+                <div class="center-content bottom">
+                    <a href="Register.html"><span class="registerMeBtn">Create an Account</span></a>
                 </div>
             </fieldset>    
         </form>
