--- a/Test/Upload.html
+++ b/Test/Upload.html
@@ -33,7 +33,7 @@
                 });
             });
 
-            
+
         });
     </script>
 
@@ -55,7 +55,8 @@
         }
         img.profileIcon{
             border-radius: 60px;
-            box-shadow: 0 0 0 5px black inset;
+            
+            max-height: 350px;
         }
         .center-content{
             display: flex;
