--- a/Test/Matched.html
+++ b/Test/Matched.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="namedInput">
-                    <input readonly class="userInp" type="text" name="nameInp" placeholder="Big ol' Zucc">
+                    <input readonly class="userInp" type="text" name="nameInp" placeholder="Mark Zucc">
                 </div>
                 <div class="center-content">
                     <p>You are both green apples!</p>
