--- a/hackmcr.html
+++ b/hackmcr.html
@@ -20,13 +20,13 @@
   </head>
   
   <div>
-    <h1>Time left in Hack Manchester 2018: </h1>  
+    <h1>Time until Hack Manchester Awards: </h1>  
     <h1 id="demo"; >?</h1> 
   </div>
  
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("October 28, 2018 14:00:00").getTime();
+var countDownDate = new Date("October 28, 2018 18:00:00").getTime();
 // Update the count down every 1 second
 var x = setInterval(function() {
   // Get todays date and time
