adds the most basic content to the new test site

--- a/Site/Index.html
+++ b/Site/Index.html
@@ -4,7 +4,17 @@
 	<head>
 		<title>Jake Gore // Software Engineer</title>
 	</head>
+
+	<style type="text/css">
+		.center{
+			display: flex;
+			justify-content: center;
+		}
+	</style>
+
 	<body>
-		<header>Jake Gore</header>
+		<header class="center"><h1>Jake Gore</h1></header>
+
+		<p class="center">I am a Computer Science student at the University Of Hull. Currently, I am on a year in industry working at UNiDAYS in Nottingham.</p>
 	</body>
 </html>
