changes the fonts

--- a/Site/Index.html
+++ b/Site/Index.html
@@ -2,19 +2,27 @@
 
 <html>
 	<head>
+		<link href="https://fonts.googleapis.com/css?family=Bitter|Source+Sans+Pro:300" rel="stylesheet">
 		<title>Jake Gore // Software Engineer</title>
 	</head>
 
 	<style type="text/css">
+		.nice-font{font-family: 'Bitter', serif;}
+		.sans-serif{font-family: 'Source Sans Pro', sans-serif;}
 		.center{
 			display: flex;
 			justify-content: center;
 		}
+		.inner{
+			max-width:900px;
+		}
 	</style>
 
 	<body>
-		<header class="center"><h1>Jake Gore</h1></header>
+		<div class="center inner">
+		<header class="center nice-font"><h1>Jake Gore</h1></header>
 
-		<p class="center">I am a Computer Science student at the University Of Hull. Currently, I am on a year in industry working at UNiDAYS in Nottingham.</p>
+		<p class="center sans-serif">I am a Computer Science student at the University Of Hull. Currently, I am on a year in industry working as a software engineer at UNiDAYS in Nottingham.</p>
+		</div>
 	</body>
 </html>
