--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     h1 {
     font-family: Tahoma, Geneva, sans-serif;
     font-size:140px}
+    .content{
+      max-width: 100%;
+    }
   </style>
   
   <head>
@@ -20,8 +23,8 @@
   </head>
   
   <div>
-    <h1>Time left in internship: </h1>  
-    <h1 id="demo"; >?</h1> 
+    <h1 class="content">Time left in internship: </h1>  
+    <h1 class="content" id="demo"; >?</h1> 
   </div>
  
 <script>
