changes styling, removes old countdown

--- a/Site/Index.html
+++ b/Site/Index.html
@@ -13,19 +13,26 @@
 			display: flex;
 			justify-content: center;
 		}
+		.left{
+			display: flex;
+			justify-content: flex-start;
+		}
 		.inner{
 			width:100%;
 		}
-		body{
-			max-width:900px;
+		p{
+			font-size: 50px;
 		}
 	</style>
-
-	<body>
+<div class="left">
+	<body class="center">
+		<div>
 		<div class="center inner">
 		<header class="center nice-font"><h1>Jake Gore</h1></header>
 
 		<p class="center sans-serif">I am a Computer Science student at the University Of Hull. Currently, I am on a year in industry working as a software engineer at UNiDAYS in Nottingham.</p>
 		</div>
+	</div>
 	</body>
+</div>
 </html>
