--- a/Site/Index.html
+++ b/Site/Index.html
@@ -23,6 +23,10 @@
 		p{
 			font-size: 50px;
 		}
+		h1{
+			font-size: 4em;
+			margin-right: 1em;
+		}
 	</style>
 <div class="left">
 	<body class="center">
