--- a/Site/Index.html
+++ b/Site/Index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Bitter|Source+Sans+Pro:300" rel="stylesheet">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<title>Jake Gore // Software Engineer</title>
 	</head>
 
@@ -34,7 +35,7 @@
 		<div class="center inner">
 		<header class="center nice-font"><h1>Jake Gore</h1></header>
 
-		<p class="center sans-serif">I am a Computer Science student at the University Of Hull. Currently, I am on a year in industry working as a software engineer at UNiDAYS in Nottingham.</p>
+		<p class="center sans-serif">I am a second year Computer Science student at the University Of Hull. Currently, on a year in industry working as a software engineer for UNiDAYS in Nottingham.</p>
 		</div>
 	</div>
 	</body>
