--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="center inner">
 		<header class="center nice-font"><h1>Jake Gore</h1></header>
 
-		<p class="center sans-serif">I am a second year Computer Science student at the University Of Hull. Currently, on a year in industry working as a software engineer for UNiDAYS in Nottingham.</p>
+		<p class="center sans-serif">I am a second year Computer Science student at the University of Hull. Currently, on a year in industry working as an intern software engineer for UNiDAYS in Nottingham.</p>
 		</div>
 	</div>
 	</body>
