--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 			width:100%;
 		}
 		p{
-			font-size: 50px;
+			font-size: 40px;
+			margin-right: 1em;
 		}
 		h1{
 			font-size: 4em;
 			margin-right: 1em;
+			max-width: 3em;
 		}
 	</style>
 <div class="left">
