--- a/roda.html
+++ b/roda.html
@@ -3,5 +3,19 @@
     font-family: "Comic Sans MS", cursive, sans-serif;
     font-size: 300px;
   }
+  .rainbow{
+  	animation: rainbow 3s infinite; 
+  }
+
+  @keyframes rainbow{
+  0%{color: orange;}	
+  10%{color: purple;}	
+	20%{color: red;}
+	40%{color: yellow;}
+	60%{color: green;}
+	100%{color: blue;}
+	100%{color: orange;}
+}
+
 </style>
-<h1>No</h1>
+<h1 class="rainbow">No</h1>
