--- a/roda.html
+++ b/roda.html
@@ -2,6 +2,7 @@
   h1{
     font-family: "Comic Sans MS", cursive, sans-serif;
     font-size: 300px;
+    text-align: center;
   }
   .rainbow{
   	animation: rainbow 3s infinite; 
