--- a/roda.html
+++ b/roda.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="icon" href="http://jakegore.co.uk/rob-happy.gif" type="image/gif" />
+</head>
+
 <style>
   h1{
     font-family: "Comic Sans MS", cursive, sans-serif;
