--- a/roda.html
+++ b/roda.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="icon" href="http://jakegore.co.uk/rob-happy.gif" type="image/gif" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110467141-1"></script>
 </head>
 
 <style>
