adds more analytics stuff

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <html>
 	<head>
+				<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110467141-2"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'UA-110467141-2');
+		</script>
+
 		<link href="https://fonts.googleapis.com/css?family=Bitter|Source+Sans+Pro:300" rel="stylesheet">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<title>Jake Gore // Software Engineer</title>
@@ -21,6 +30,9 @@
 		.inner{
 			width:100%;
 		}
+		.bar{
+			height: 100%;
+		}
 		p{
 			font-size: 40px;
 			margin-right: 1em;
@@ -30,13 +42,19 @@
 			margin-right: 1em;
 			max-width: 3em;
 		}
+		body{
+			height: 100%;
+		}
 	</style>
 <div class="left">
+	<div class="left bar">
+		<h1 class="center nice-font">Jake Gore</h1>
+	</div>
 	<body class="center">
 		<div>
 		<div class="center inner">
-		<header class="center nice-font"><h1>Jake Gore</h1></header>
-
+			
+		
 		<p class="center sans-serif">I am a second year Computer Science student at the University of Hull. Currently, on a year in industry working as an intern software engineer for UNiDAYS in Nottingham.</p>
 		</div>
 	</div>
