--- a/roda.html
+++ b/roda.html
@@ -1,6 +1,14 @@
 <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110467141-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-110467141-2');
+    </script>
     <link rel="icon" href="http://jakegore.co.uk/rob-happy.gif" type="image/gif" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110467141-1"></script>
 </head>
 
 <style>
