--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 		  gtag('js', new Date());
 		  gtag('config', 'UA-110467141-2');
 		</script>
+				<!-- Global site tag (gtag.js) - Google Analytics -->
 
 		<link href="https://fonts.googleapis.com/css?family=Bitter|Source+Sans+Pro:300" rel="stylesheet">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<title>Jake Gore // Software Engineer</title>
+		<meta name="author" content="Jake Gore">
+		<meta name="description" content="The home of Jake Gore, a computer science student at the University of Hull.">
 	</head>
 
 	<style type="text/css">
