--- a/roda.html
+++ b/roda.html
@@ -9,6 +9,8 @@
       gtag('config', 'UA-110467141-2');
     </script>
     <link rel="icon" href="http://jakegore.co.uk/rob-happy.gif" type="image/gif" />
+    <meta name="author" content="Jake Gore">
+    <meta name="description" content="Will Roda ever get his 2080ti?">
 </head>
 
 <style>
