--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
     text-align: center;
     margin: 0;
     z-index: 10000;
+    position: relative;
   }
   .rainbow{
   	animation: rainbow 3s infinite; 
