--- a/bb8.html
+++ b/bb8.html
@@ -1,365 +1,83 @@
+<head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110467141-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-110467141-2');
+    </script>
+    <link rel="icon" href="http://jakegore.co.uk/rob-happy.gif" type="image/gif" />
+    <link rel="stylesheet" href="bb8.css">
+    <meta name="author" content="Jake Gore">
+    <meta name="description" content="Will Roda ever get his 2080ti?">
+</head>
+
 <style>
-.wrapper {
-  
-  position: relative;
-  text-align: center;
-  padding: 20px;
-  min-height: 400px;
-  overflow: hidden;
-}
-.main-title {
+  h1{
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 300px;
+    text-align: center;
+  }
+  body{
+    overflow: hidden;
+  }
+  .wrapper{
+     position: absolute;
+     bottom:62px;
+  }
+  .rainbow{
+    animation: rainbow 3s infinite; 
+  }
+  .snowflake {
   color: #fff;
-  font-family: 'Baloo Bhaina', cursive;
-  font-size: 36px;
-  line-height: 1;
-  margin: 20px 0 0 0;
-  text-shadow: 1px 1px 1px #061612;
-}
-.bb8 {
-  height: 300px;
-  position: relative;
-}
-.bb8 .bb8-head, .bb8 .bb8-body {
-  background: #f8f8f8;
-  margin: 0 auto;
-  position: relative;
-}
-.bb8 .bb8-head {
-  width: 100px;
-  height: 100px;
-  -webkit-clip-path: circle(50% at 50% 85%);
-  clip-path: circle(50% at 50% 85%);
-  position: relative;
-  margin: 0;
-  margin-left: 47px;
-  transform-origin: center 250px;
-  -webkit-animation: lean 500ms ease-in-out infinite alternate, moveLeftRight 5s linear infinite;
-  -moz-animation: lean 500ms linear infinite, moveLeftRight 5s linear infinite;
-  -ms-animation: lean 500ms linear infinite, moveLeftRight 5s linear infinite;
-  animation: lean 500ms ease-in-out infinite alternate, moveLeftRight 5s linear infinite;
-}
-.bb8 .bb8-head:before {
-  content: "";
-  width: 100%;
-  height: 5px;
-  background: #ff8a00;
-  position: absolute;
-  top: 40px;
-  left: 0px;
-}
-.bb8 .bb8-head:after {
-  content: "";
-  width: 100%;
-  height: 10px;
-  background: #c5c5c5;
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-}
-.bb8 .bb8-body {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  display: block;
-  margin-top: 1px;
-  transition: all 1s ease;
-  position: absolute;
-  left: 0;
-  overflow: hidden;
-  z-index: 10;
-  -webkit-animation: spin 3000ms linear infinite, moveLeftRight 5s linear infinite;
-  -moz-animation: spin 3000ms linear infinite, moveLeftRight 5s linear infinite;
-  -ms-animation: spin 3000ms linear infinite, moveLeftRight 5s linear infinite;
-  animation: spin 3000ms linear infinite, moveLeftRight 5s linear infinite;
-}
-.bb8 .circle {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  border: 20px solid #ff8a00;
-  position: absolute;
-}
-.bb8 .circle:before {
-  content: "";
-  background: #d2d2d2;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-.bb8 .circle:first-child {
-  top: -60px;
-  left: 46px;
-}
-.bb8 .circle:nth-child(2) {
-  top: 80px;
-  left: -55px;
-}
-.bb8 .circle:nth-child(3) {
-  top: 90px;
-  left: 106px;
-}
-.bb8 .eye1, .bb8 .eye2 {
-  border-radius: 50%;
-}
-.bb8 .eye1 {
-  width: 22px;
-  height: 22px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background: #5f5f5f;
-  -webkit-transform: translatex(-50%);
-  -moz-transform: translatex(-50%);
-  transform: translatex(-50%);
-}
-.bb8 .eye2 {
-  width: 16px;
-  height: 16px;
-  position: absolute;
-  top: 65%;
-  left: 60%;
-  background: #f8f8f8;
-  border: 2px solid #5f5f5f;
-}
-.bb8 .eye2:after {
-  content: "";
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background: #000;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-.bb8 .antenna-sm, .bb8 .antenna-l {
-  width: 2px;
-  background: #fff;
-  position: absolute;
-  left: 0px;
-  transform-origin: center 250px;
-  -webkit-animation: lean 500ms ease-in-out infinite alternate, moveLeftRight 5s linear infinite;
-  -moz-animation: lean 500ms linear infinite, moveLeftRight 5s linear infinite;
-  -ms-animation: lean 500ms linear infinite, moveLeftRight 5s linear infinite;
-  animation: lean 500ms ease-in-out infinite alternate, moveLeftRight 5s linear infinite;
-}
-.bb8 .antenna-sm {
-  height: 15px;
-  top: 20px;
-  left: 0px;
-  margin-left: 90px;
-}
-.bb8 .antenna-l {
-  height: 25px;
-  top: 10px;
-  left: 0px;
-  margin-left: 100px;
-}
-.bb8 .antenna-l:after, .bb8 .antenna-l:before {
-  content: "";
-  background: #333;
-  height: 5px;
-  width: 100%;
-  position: absolute;
-  left: 0;
-}
-.bb8 .antenna-l:before {
-  top: 0;
-}
-.bb8 .antenna-l:after {
-  bottom: 0;
-}
-.bb8-head-shadow {
-  width: 100px;
-  height: 100px;
-  -webkit-clip-path: circle(50% at 50% 85%);
-  clip-path: circle(50% at 50% 85%);
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0;
-  margin-left: 50px;
-  box-shadow: 0px 1px 22px 2px rgba(0, 0, 0, .8);
-  z-index: 999;
-  transform-origin: center 250px;
-  -webkit-animation: lean 500ms ease-in-out infinite alternate, moveLeftRight 5s linear infinite;
-  -moz-animation: lean 500ms linear infinite, moveLeftRight 5s linear infinite;
-  -ms-animation: lean 500ms linear infinite, moveLeftRight 5s linear infinite;
-  animation: lean 500ms ease-in-out infinite alternate, moveLeftRight 5s linear infinite;
-}
-.bb8-body-shadow {
-  width: 160px;
-  height: 2px;
-  background: transparent;
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  border-radius: 50%;
-  box-shadow: 0 14px 14px 8px rgba(0, 0, 0, .2);
-  transform: translateX(-20px);
-  -webkit-animation: moveLeftToRight 5s linear infinite;
-  -moz-animation: moveLeftRight 5s linear infinite;
-  -ms-animation: moveLeftRight 5s linear infinite;
-  animation: moveLeftRight 5s linear infinite;
-}
-.hat {
-  height: 0;
-  width: 0;
-  border-bottom: 100px solid red;
-  border-right: 50px solid transparent;
-  border-left: 50px solid transparent;
-  position: relative;
-  transform-origin: center 315px;
-  -webkit-animation: lean 500ms ease-in-out infinite alternate, moveLeftRight 5s linear infinite;
-  -moz-animation: lean 500ms linear infinite, moveLeftRight 5s linear infinite;
-  -ms-animation: lean 500ms linear infinite, moveLeftRight 5s linear infinite;
-  animation: lean 500ms ease-in-out infinite alternate, moveLeftRight 5s linear infinite;
-  margin-bottom:-40px;
-  margin-left: 50px;
-  z-index: 20;
+  font-size: 2em;
+  font-family: Arial;
+  text-shadow: 0 0 1px #000;
 }
 
-.hat::after {
-  content: '';
-  position: absolute;
-  top: 90px;
-  right: -50px;
-  width: 100px;
-  height: 15px;
-  border-radius: 100px;
-  background-color: white;
-}
-.hat__top {
-  position: absolute;
-  height: 0px;
-  width: 0px;
-  right: 7px;
-  top: -4px;
-  border-bottom: 50px solid #e70404;
-  border-right: 15px solid transparent;
-  border-left: 15px solid transparent;
-  transform: rotate(-100deg);
-  z-index: -1;
-}
-.hat__top::after {
-  content: '';
-  position: absolute;
-  bottom: -10px;
-  left: -13px;
-  background: white;
-  height: 25px;
-  width: 25px;
-  border-radius: 100%;
-}
-/*  Spinning animation */
-@-ms-keyframes spin {
-  from {
-    -ms-transform: rotate(0deg);
-  }
-  to {
-    -ms-transform: rotate(360deg);
-  }
-}
-@-moz-keyframes spin {
-  from {
-    -moz-transform: rotate(0deg);
-  }
-  to {
-    -moz-transform: rotate(360deg);
-  }
-}
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes spin {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-  }
-}
-/*  Lean animation */
-@-ms-keyframes lean {
-  0% {
-    transform: rotate(-10deg);
-  }
-  100% {
-    transform: rotate(10deg);
-  }
-}
-@-moz-keyframes lean {
-  0% {
-    transform: rotate(-10deg);
-  }
-  100% {
-    transform: rotate(10deg);
-  }
-}
-@keyframes lean {
-  0% {
-    transform: rotate(-10deg);
-  }
-  100% {
-    transform: rotate(10deg);
-  }
-}
-@-webkit-keyframes lean {
-  0% {
-    transform: rotate(-10deg);
-  }
-  100% {
-    transform: rotate(10deg);
-  }
-}
-/*  Move Right animation */
-@-moz-keyframes moveLeftRight {
-  0% {
-    left: -100px;
-  }
-  100% {
-    left: 100vw;
-  }
-}
-@-ms-keyframes moveLeftRight {
-  0% {
-    left: -100px;
-  }
-  100% {
-    left: 100vw;
-  }
-}
-@keyframes moveLeftRight {
-  0% {
-    left: -100px;
-  }
-  100% {
-    left: 100vw;
-  }
-}
-@-webkit-keyframes moveLeftRight {
-  0% {
-    left: -100px;
-  }
-  100% {
-    left: 100vw;
-  }
+@-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
+
+  @keyframes rainbow{
+  0%{color: green;}
+  50%{color: red;}
+  100%{color: green;}
 }
 </style>
+
+<div class="snowflakes" aria-hidden="true">
+  <div class="snowflake">
+  ❄
+  </div>
+  <div class="snowflake">
+  ❅
+  </div>
+  <div class="snowflake">
+  ❆
+  </div>
+  <div class="snowflake">
+  ❄
+  </div>
+  <div class="snowflake">
+  ❅
+  </div>
+  <div class="snowflake">
+  ❆
+  </div>
+  <div class="snowflake">
+  ❄
+  </div>
+  <div class="snowflake">
+  ❅
+  </div>
+  <div class="snowflake">
+  ❆
+  </div>
+  <div class="snowflake">
+  ❄
+  </div>
+</div>
+<h1 class="rainbow">No</h1>
 
 
 <div class="wrapper">
@@ -367,9 +85,7 @@
     <div class="hat">
       <div class="hat__top"></div>
      </div>
-   
     <div class="bb8-head">
-
       <div class="eye1"></div>
       <div class="eye2"></div>
     </div>
@@ -377,8 +93,6 @@
       <div class="circle"></div>
       <div class="circle"></div>
       <div class="circle"></div>
-    </div>
-   
-   
+    </div>   
   </div>
 </div> 
