--- a/bb8.html
+++ b/bb8.html
@@ -16,15 +16,20 @@
 <style>
   h1{
     font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size: 300px;
+    font-size: 56em;
     text-align: center;
+    margin: 0;
   }
   body{
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .wrapper{
      position: absolute;
      bottom:62px;
+     left:0;
   }
   .rainbow{
     animation: rainbow 3s infinite; 
