--- a/roda.html
+++ b/roda.html
@@ -16,20 +16,29 @@
 <style>
   h1{
     font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size: 56em;
+    font-size: 720px;
     text-align: center;
-    margin: 0;
+    line-height: 90%;
+    position:absolute;
+    margin:0;
+    bottom:0;
+    left:0;
+    right:0;
   }
   body{
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
+  .main{
+    width:100%;
+  }
+
   .wrapper{
      position: absolute;
-     bottom:62px;
+     bottom:0;
      left:0;
+     width: 100%;
+     height: 360px;
+     overflow: hidden;
   }
   .rainbow{
     animation: rainbow 3s infinite; 
@@ -39,7 +48,7 @@
   font-size: 2em;
   font-family: Arial;
   text-shadow: 0 0 1px #000;
-}
+  }
 
 @-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%{-webkit-transform:translateX(0px);transform:translateX(0px)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}100%{-webkit-transform:translateX(0px);transform:translateX(0px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%{transform:translateX(0px)}50%{transform:translateX(80px)}100%{transform:translateX(0px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}
 
@@ -50,54 +59,54 @@
 }
 </style>
 
-<div class="snowflakes" aria-hidden="true">
-  <div class="snowflake">
-  ❄
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❄
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❄
-  </div>
-  <div class="snowflake">
-  ❅
-  </div>
-  <div class="snowflake">
-  ❆
-  </div>
-  <div class="snowflake">
-  ❄
-  </div>
-</div>
-<h1 class="rainbow">No</h1>
-
-
-<div class="wrapper">
-  <div class="bb8">
-    <div class="hat">
-      <div class="hat__top"></div>
-     </div>
-    <div class="bb8-head">
-      <div class="eye1"></div>
-      <div class="eye2"></div>
+<body>
+  <div class="snowflakes" aria-hidden="true">
+    <div class="snowflake">
+    ❄
     </div>
-    <div class="bb8-body">
-      <div class="circle"></div>
-      <div class="circle"></div>
-      <div class="circle"></div>
-    </div>   
+    <div class="snowflake">
+    ❅
+    </div>
+    <div class="snowflake">
+    ❆
+    </div>
+    <div class="snowflake">
+    ❄
+    </div>
+    <div class="snowflake">
+    ❅
+    </div>
+    <div class="snowflake">
+    ❆
+    </div>
+    <div class="snowflake">
+    ❄
+    </div>
+    <div class="snowflake">
+    ❅
+    </div>
+    <div class="snowflake">
+    ❆
+    </div>
+    <div class="snowflake">
+    ❄
+    </div>
   </div>
-</div> 
+<h1 class="rainbow">No</h1> 
+  <div class="wrapper">
+    <div class="bb8">
+      <div class="hat">
+        <div class="hat__top"></div>
+       </div>
+      <div class="bb8-head">
+        <div class="eye1"></div>
+        <div class="eye2"></div>
+      </div>
+      <div class="bb8-body">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>   
+    </div>
+  </div> 
+</body>
