--- a/bb8.html
+++ b/bb8.html
@@ -1,6 +1,6 @@
 <style>
   body{
-    background-image: url(Card.png); 
+    background-image: url(card.png); 
     overflow: hidden;
     background-size: 100px 100px;
   }
@@ -79,60 +79,60 @@
 <h1 class="rainbow">YES!</h1>
 <div class="">
   <div class="rowofrobs allrobs">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
   
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
   
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
   
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
   
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
-    <img class="loading clockwise" src="Card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
+    <img class="loading clockwise" src="card.png">
   </div>
 </div>
 </div>
