--- a/roda.html
+++ b/roda.html
@@ -1,3 +1,17 @@
+<head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110467141-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-110467141-2');
+    </script>
+    <link rel="icon" href="http://jakegore.co.uk/rob-happy.gif" type="image/gif" />
+    <meta name="author" content="Jake Gore">
+    <meta name="description" content="Will Roda ever get his 2080ti?">
+</head>
+
 <style>
 	body{
 		background-image: url(http://jakegore.co.uk/rob-happy2.gif); 
