--- a/Projects/Sudoku/index.html
+++ b/Projects/Sudoku/index.html
@@ -1,5 +1,13 @@
 <html>
 	<head>
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110467141-2"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+			  gtag('config', 'UA-110467141-2');
+			</script>
+
 		<title>Jake Gore // Sudoku</title>
 	</head>
 
