--- a/JSCamera.html
+++ b/JSCamera.html
@@ -4,7 +4,8 @@
 
 <script>
 const constraints = {
-  video: true
+  video: 
+  { facingMode: { exact: "environment" } } 
 };
 
 const video = document.querySelector('video');
