--- a/JSCamera.html
+++ b/JSCamera.html
@@ -58,7 +58,7 @@
             const deviceInfo = deviceInfos[i];
             const option = document.createElement('option');
             option.value = deviceInfo.deviceId;
-
+            alert(deviceInfo.deviceId);
             if (deviceInfo.kind === 'videoinput') {
                 option.text = deviceInfo.label || `camera ${videoSelect.length + 1}`;
                 videoSelect.appendChild(option);
