--- a/JSCamera.html
+++ b/JSCamera.html
@@ -58,8 +58,9 @@
             const deviceInfo = deviceInfos[i];
             const option = document.createElement('option');
             option.value = deviceInfo.deviceId;
-            alert(deviceInfo.deviceId);
+            
             if (deviceInfo.kind === 'videoinput') {
+                alert(deviceInfo.deviceId);
                 option.text = deviceInfo.label || `camera ${videoSelect.length + 1}`;
                 videoSelect.appendChild(option);
             } else {
@@ -77,7 +78,7 @@
         const videoSource = videoSelect.value;
 
         const constraints = {
-            video: { deviceId: videoSource ? { exact: videoSource } : undefined }
+            video: { deviceId: { exact: videoSource } }
         };
 
         //navigator.mediaDevices.getUserMedia(constraints).then(gotStream).then(gotDevices).catch(handleError);
